--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -15,5 +15,11 @@
 
 
 <!-- c-grid-proyects -->
-<%= render partial: "map-proyects" %>
+<div class="c-card-grid">
+  <div id="mapProjectContent">
+    <%= render(:partial => 'map-projects') %>
+    <%= link_to 'Load project', :controller => 'map', :action => 'index', :format => 'js', remote: true %>
+
+  </div>
+</div>
 
