--- a/app/views/map/index.js.erb
+++ b/app/views/map/index.js.erb
@@ -1,1 +1,6 @@
-$('#mapProjectContent').html("<%= j render(:partial => 'map-projects') %>");
+(function(App) {
+  'use strict';
+  App.Events.trigger('remote:load', {
+    content: "<%= j render(:partial => @current_type) %>"
+  });
+})(this.App);
