Header modified active section  element & avatar added

--- a/app/assets/stylesheets/components/_badge.scss
+++ b/app/assets/stylesheets/components/_badge.scss
@@ -16,6 +16,7 @@
   background-color: $color-1;
   font-size: $font-size-tiny;
   color: $color-3;
+  font-weight: $font-weight-bold;
 
   &.-color-2 {
     background-color: $color-6;
