--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,6 +22,17 @@
               <% if true %>
                 <div class="c-badge">7</div>
               <% end %>
+
+              <div class="c-user-dropdown-menu">
+                <ul class="user-profile menu-section">
+                  <li class="item"><%= link_to (t 'your_profile'), '/', {:class => "item-link", :method => :get} %></li>
+                  <li class="item"><%= link_to (t 'logout'), destroy_user_session_path, {:class => "item-link", :method => :delete} %></li>
+                </ul>
+
+                <ul class="user-tools menu-section -color-2">
+                  <li class="item"><%= link_to (t 'add_project'), new_user_project_path, {:class => "item-link", :method => :get} %></li>
+                </ul>
+              </div>
             </div>
           </li>
         <% else %>
@@ -49,6 +60,17 @@
             <% if true %>
               <div class="c-badge">7</div>
             <% end %>
+
+            <div class="c-user-dropdown-menu">
+              <ul class="user-profile menu-section">
+                <li class="item"><%= link_to (t 'your_profile'), '/', {:class => "item-link", :method => :get} %></li>
+                <li class="item"><%= link_to (t 'logout'), destroy_user_session_path, {:class => "item-link", :method => :delete} %></li>
+              </ul>
+
+              <ul class="user-tools menu-section -color-2">
+                <li class="item"><%= link_to (t 'add_project'), new_user_project_path, {:class => "item-link", :method => :get} %></li>
+              </ul>
+            </div>
           </div>
         </li>
       <% else %>
