Allow to create update and delete user's projects and setup test env

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
 
   <body>
     <%= render "shared/header" %>
+    <% if alert %>
+      <%= alert %>
+    <% else %>
+      <%= notice %>
+    <% end %>
     <%= yield %>
     <%= render "shared/footer" %>
   </body>
