--- a/app/views/network_projects/_form.html.erb
+++ b/app/views/network_projects/_form.html.erb
@@ -1,1 +1,5 @@
-<%= form.input :name %>
+<%= form.input :title %>
+<%= form.input :summary %>
+<%= form.input :project_website %>
+<%= form.input :start_date %>
+<%= form.input :end_date %>
