--- a/app/views/network_projects/new.html.erb
+++ b/app/views/network_projects/new.html.erb
@@ -1,4 +1,4 @@
-<% simple_form_for @project do |f| %>
+<%= simple_form_for [@user, @project], url: user_projects_url(@user) do |f| %>
   <%= render partial: f %>
-  <%= f.button :submit, 'update', class: '' %>
+  <%= f.button :submit, 'Create', class: '' %>
 <% end %>
