--- a/app/views/network_projects/_form.html.erb
+++ b/app/views/network_projects/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form.input :title %>
+<div class="c-section-intro">
+	<%= form.input :title, label: 'Project title_', label_html: { class: 'c-title -bigger -bold' }, :required => false %>
+</div>
 <%= form.input :summary %>
 <%= form.input :project_website %>
 <%= form.input :start_date %>
