Map legend title component

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -32,6 +32,7 @@ $color-4:  #68299b; // purple
 $color-5:  #fbfbfb; // bone-white
 $color-6:  #f57823; // orange
 $color-7:  #000;    // black
+$color-8:  #deeffa; // lightblue
 
 /* Shadows */
 $shadow-1: 0 7px 10px rgba(0, 0, 0, 0.1);
