--- a/app/views/map/_projects.html.erb
+++ b/app/views/map/_projects.html.erb
@@ -1,21 +1,33 @@
 <div class="card -1-2 -tablet-1-4">
-  <h4 class="c-card-title -border-1"><%= t 'breast' %></h4>
-  <h2 class="c-title -big">55</h3>
+  <h4 class="c-legend-title">
+    <div class="icon -color-3"></div>
+    Breast
+  </h4>
+  <h2 class="c-title -big">215</h2>
 </div>
 
 <div class="card -1-2 -tablet-1-4">
-  <h4 class="c-card-title -border-2"><%= t 'non_melanoma_skin_cancer' %></h4>
-  <h2 class="c-title -big">215</h3>
+  <h4 class="c-legend-title">
+    <div class="icon -color-2"></div>
+    NON-MELANOMA SKIN CANCER
+  </h4>
+  <h2 class="c-title -big">215</h2>
 </div>
 
 <div class="card -1-2 -tablet-1-4">
-  <h4 class="c-card-title -border-2"><%= t 'trachea_bronchus_and_lung' %></h4>
-  <h2 class="c-title -big">350</h3>
+  <h4 class="c-legend-title">
+    <div class="icon"></div>
+    TRACHEA, BRONCHUS AND LUNG
+  </h4>
+  <h2 class="c-title -big">215</h2>
 </div>
 
 <div class="card -1-2 -tablet-1-4">
-  <h4 class="c-card-title -border-3"><%= t 'other' %></h4>
-  <h2 class="c-title -big">1047</h3>
+  <h4 class="c-legend-title">
+    <div class="icon -color-4"></div>
+    Other
+  </h4>
+  <h2 class="c-title -big">215</h2>
 </div>
 
 <% @projects.each do |p| %>
