--- a/app/assets/stylesheets/components/_user-dropdown-menu.scss
+++ b/app/assets/stylesheets/components/_user-dropdown-menu.scss
@@ -68,6 +68,10 @@
         font-size: $font-size-x-small;
         font-weight: $font-weight-bold;
         text-transform: uppercase;
+
+        &:hover {
+          opacity: .6;
+        }
       }
     }
   }
