--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,10 +21,9 @@
               <% if true %>
                 <div class="c-badge">7</div>
               <% end %>
-
               <div class="c-user-dropdown-menu js-user-dropdown-menu">
                 <ul class="user-profile menu-section">
-                  <li class="item"><%= link_to (t 'your_profile'), '/', {:class => "item-link", :method => :get} %></li>
+                  <li class="item"><%= link_to (t 'your_profile'), user_path(current_user), {:class => "item-link", :method => :get} %></li>
                   <li class="item"><%= link_to (t 'logout'), destroy_user_session_path, {:class => "item-link", :method => :delete} %></li>
                 </ul>
 
