--- a/app/assets/stylesheets/components/_card-grid.scss
+++ b/app/assets/stylesheets/components/_card-grid.scss
@@ -123,6 +123,10 @@
     > .c-button {
       display: inline-block;
       margin-top: 10px;
+
+      &.-network {
+        margin-top: 18px;
+      }
     }
 
     > .c-card-user-profile { margin-top: 25px; }
