--- a/app/assets/stylesheets/components/_tag-list.scss
+++ b/app/assets/stylesheets/components/_tag-list.scss
@@ -13,12 +13,22 @@
   flex-wrap: wrap;
 
   > .tag {
+    color: $color-2;
     padding: 1px 4px;
     margin: 4px;
     font-size: $font-size-x-small;
     font-weight: bold;
     text-transform: uppercase;
     background: rgba($color-2, .1);
+  }
+
+  &.-closer {
+    > .tag {
+      margin: 2px !important;
+      opacity: .6;
+      font-weight: $font-weight-normal;
+      text-transform: capitalize;
+    }
   }
 
 }
