Mail messages styling

--- a/app/assets/stylesheets/components/_user-form.scss
+++ b/app/assets/stylesheets/components/_user-form.scss
@@ -16,4 +16,29 @@
     margin: 0;
     margin-bottom: 26px;
   }
+
+  .cancel-account {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+
+    > div {
+      display: flex;
+      flex-flow: column;
+    }
+
+    .c-title {
+      text-align: right;
+    }
+
+    .cancel {
+      display: flex;
+      align-items: center;
+      margin-bottom: 35px;
+
+      & .c-button {
+        margin-left: 30px;
+      }
+    }
+  }
 }
