--- a/app/views/users/mailer/password_change.html.erb
+++ b/app/views/users/mailer/password_change.html.erb
@@ -1,4 +1,4 @@
-<div class="c-user-form wrapper">
+<div class="c-mail-message wrapper">
   <p>Hello <%= @resource.email %>!</p>
 
   <p>We're contacting you to notify you that your password has been changed.</p>
