--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<div class="c-user-form wrapper">
+<div class="c-mail-message wrapper">
   <p>Hello <%= @resource.email %>!</p>
 
   <p>Someone has requested a link to change your password. You can do this through the link below.</p>
