--- a/app/views/users/mailer/unlock_instructions.html.erb
+++ b/app/views/users/mailer/unlock_instructions.html.erb
@@ -1,4 +1,4 @@
-<div class="c-user-form wrapper">
+<div class="c-mail-message wrapper">
   <p>Hello <%= @resource.email %>!</p>
 
   <p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
