--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<div class="c-user-form wrapper">
+<div class="c-mail-message wrapper">
   <p>Welcome <%= @email %>!</p>
 
   <p>You can confirm your account email through the link below:</p>
