adds map api filters

--- a/app/sql_queries/map_projects.sql.erb
+++ b/app/sql_queries/map_projects.sql.erb
@@ -1,7 +1,7 @@
 select
 projects.id as project,
 projects.title as project_title,
-countries.country_name as name,
+countries.country_name as location_name,
 countries.country_centroid as centroid,
 countries.country_iso_3 as iso,
 'project' as type,
@@ -11,4 +11,40 @@ from projects
     inner join research_units on memberships.research_unit_id = research_units.id
     inner join addresses on research_units.address_id = addresses.id
     inner join countries on addresses.country_id = countries.id
-group by project, project_title, name, centroid, iso, is_project_lead
+     <% if @params[:organizations] || @params[:organization_types] %>
+      inner join organizations on addresses.organization_id = organizations.id
+    <% end %>
+    <% if @params[:organization_types] %>
+      inner join organization_types on organization_types.id = organizations.organization_type_id
+    <% end %>
+    <% if @params[:project_types] %>
+      inner join project_types_projects on project_types_projects.project_id = projects.id
+      inner join project_types on project_types_projects.project_type_id = project_types.id
+    <% end %>
+    <% if @params[:cancer_types] %>
+      inner join cancer_types_projects on cancer_types_projects.project_id = projects.id
+      inner join cancer_types on cancer_types_projects.cancer_type_id = cancer_types.id
+    <% end %>
+    where 1 = 1
+    <% if @params[:countries] %>
+      and countries.id in     <%= "#{'(' + @params[:countries].join(',') + ')'}" %>
+    <% end %>
+    <% if @params[:organizations] %>
+      and organizations.id in <%= "#{'(' + @params[:organizations].join(',') + ')'}" %>
+    <% end %>
+    <% if @params[:organization_types] %>
+      and organization_types.id in <%= "#{'(' + @params[:organization_types].join(',') + ')'}" %>
+    <% end %>
+    <% if @params[:project_types] %>
+      and project_types.id in <%= "#{'(' + @params[:project_types].join(',') + ')'}" %>
+    <% end %>
+    <% if @params[:cancer_types] %>
+      and cancer_types.id in <%= "#{'(' + @params[:cancer_types].join(',') + ')'}" %>
+    <% end %>
+    <% if @params[:start_date] %>
+      and (projects.start_date > date(<%= quote @params[:start_date] %>))
+    <% end %>
+    <% if @params[:end_date] %>
+      and (projects.end_date < date(<%= quote @params[:end_date] %>))
+    <% end %>
+group by project, project_title, location_name, centroid, iso, is_project_lead
