selects, dropdown and inputs

--- a/app/views/network_projects/_form.html.erb
+++ b/app/views/network_projects/_form.html.erb
@@ -35,82 +35,90 @@
 	</div>
 	<div class="c-staff -row">
 		<div class="-item">
-			<select name="investigators" class="chosen-select" multiple data-placeholder="Select or add investigator">
+			<select name="investigators" class="chosen-select" data-placeholder="Select or add investigator">
                 <option value="">Select or add investigator</option>
               </select>
 		</div>
 		<div class="-item">
-			<select name="organizations" class="chosen-select" multiple data-placeholder="Select or add investigation">
+			<select name="organizations" class="chosen-select" data-placeholder="Select or add investigation">
                 <option value="">Select or add investigation</option>
               </select>
 		</div>
 		<div class="-item">
-			<select name="address" class="chosen-select" multiple data-placeholder="Select or add investigation">
+			<select name="address" class="chosen-select" data-placeholder="Select or add investigation">
                 <option value="">Select or add address</option>
               </select>
 		</div>
 		<div class="-item">
-			<input type="radio">
+			<label for="tick-lead-0"></label><input type="checkbox" id="tick-lead-0"><span class="circle"></span>
 		</div>
 	</div>
 	<div class="c-staff -row">
 		<div class="-item">
-			<select name="investigators" class="chosen-select" multiple data-placeholder="Select or add investigator">
+			<select name="investigators" class="chosen-select" data-placeholder="Select or add investigator">
                 <option value="">Select or add investigator</option>
               </select>
 		</div>
 		<div class="-item">
-			<select name="organizations" class="chosen-select" multiple data-placeholder="Select or add investigation">
+			<select name="organizations" class="chosen-select" data-placeholder="Select or add investigation">
                 <option value="">Select or add investigation</option>
               </select>
 		</div>
 		<div class="-item">
-			<select name="address" class="chosen-select" multiple data-placeholder="Select or add investigation">
+			<select name="address" class="chosen-select" data-placeholder="Select or add investigation">
                 <option value="">Select or add address</option>
               </select>
 		</div>
 		<div class="-item">
-			<input type="radio">
+			<label for="tick-lead-1"></label><input type="checkbox" id="tick-lead-1"><span class="circle"></span>
 		</div>
 	</div>
 	<div class="c-staff -row">
 		<div class="-item">
-			<select name="investigators" class="chosen-select" multiple data-placeholder="Select or add investigator">
+			<select name="investigators" class="chosen-select" data-placeholder="Select or add investigator">
                 <option value="">Select or add investigator</option>
               </select>
 		</div>
 		<div class="-item">
-			<select name="organizations" class="chosen-select" multiple data-placeholder="Select or add investigation">
+			<select name="organizations" class="chosen-select" data-placeholder="Select or add investigation">
                 <option value="">Select or add investigation</option>
               </select>
 		</div>
 		<div class="-item">
-			<select name="address" class="chosen-select" multiple data-placeholder="Select or add investigation">
+			<select name="address" class="chosen-select" data-placeholder="Select or add investigation">
                 <option value="">Select or add address</option>
               </select>
 		</div>
 		<div class="-item">
-			<input type="radio">
+			<label for="tick-lead"></label><input type="checkbox"><span class="circle"></span>
 		</div>
 	</div>
 	<div class="c-staff -row">
 		<div class="-item">
-			<select name="investigators" class="chosen-select" multiple data-placeholder="Select or add investigator">
+			<select name="investigators" class="chosen-select" data-placeholder="Select or add investigator">
                 <option value="">Select or add investigator</option>
               </select>
 		</div>
 		<div class="-item">
-			<select name="organizations" class="chosen-select" multiple data-placeholder="Select or add investigation">
+			<select name="organizations" class="chosen-select" data-placeholder="Select or add investigation">
                 <option value="">Select or add investigation</option>
               </select>
 		</div>
 		<div class="-item">
-			<select name="address" class="chosen-select" multiple data-placeholder="Select or add investigation">
+			<select name="address" class="chosen-select" data-placeholder="Select or add investigation">
                 <option value="">Select or add address</option>
               </select>
 		</div>
 		<div class="-item">
-			<input type="radio">
+			<label for="tick-lead"></label><input type="checkbox"><span class="circle"></span>
 		</div>
+	</div>
+</div>
+<div class="c-section-container -staff">
+	<div class="c-staff -row">
+		Submitted information will be verified by the GCPM team to ensure data quality, and may be standardized and/or formatted for consistency before it is published. Checking this box acknowledges that you agree to share this information for public display on the Global Cancer Project Map.
+	</div>
+	<div class="c-staff -row">
+		required> <input type="checkbox" I accept these terms<span class="circle"></span>
 	</div>
 </div>
