--- a/app/assets/stylesheets/layouts/_project_add.scss
+++ b/app/assets/stylesheets/layouts/_project_add.scss
@@ -63,6 +63,34 @@
 		span, 
 		.-item {
 			display: table-cell;
+			height: 40px;
+			input[type=checkbox] {
+			   display: none;
+			}
+			label { 
+			  	position: relative;
+				height: 18px;
+				width: 18px;
+				border: solid 1px rgba(15, 48, 70, 0.5);
+			    display: inline-block;
+			    margin: -10px 0 10px 0;
+			    cursor: pointer;
+			    border-radius: 100%;
+			}
+			.circle {
+				display: none;
+			}
+			input[type=checkbox]:checked ~ .circle {
+			    display: inline-block;
+			    height: 10px;
+			    width: 10px;
+			    border: 1px solid #0f3046;
+			    border-radius: 100%;
+			    background: #0f3046;
+			    position: relative;
+			    top: -14px;
+			    right: 14px;
+			}
 		}
 	}
 }
