Hightlight avatar & user dropdown fix

--- a/app/assets/stylesheets/components/_user-profile-picture.scss
+++ b/app/assets/stylesheets/components/_user-profile-picture.scss
@@ -23,6 +23,10 @@
   background-color: $color-1;
   border-radius: 100%;
 
+  &.-active {
+    border: 3px solid $color-4;
+  }
+
   > img {
     position: absolute;
     top:  0;
