--- a/app/views/network_projects/_form.html.erb
+++ b/app/views/network_projects/_form.html.erb
@@ -90,7 +90,7 @@
               </select>
 		</div>
 		<div class="-item">
-			<label for="tick-lead"></label><input type="checkbox"><span class="circle"></span>
+			<label for="tick-lead-2"></label><input type="checkbox" id="tick-lead-2"><span class="circle"></span>
 		</div>
 	</div>
 	<div class="c-staff -row">
@@ -110,7 +110,7 @@
               </select>
 		</div>
 		<div class="-item">
-			<label for="tick-lead"></label><input type="checkbox"><span class="circle"></span>
+			<label for="tick-lead-3"></label><input type="checkbox" id="tick-lead-3"><span class="circle"></span>
 		</div>
 	</div>
 </div>
