--- a/app/views/network_projects/_form.html.erb
+++ b/app/views/network_projects/_form.html.erb
@@ -119,6 +119,6 @@
 		Submitted information will be verified by the GCPM team to ensure data quality, and may be standardized and/or formatted for consistency before it is published. Checking this box acknowledges that you agree to share this information for public display on the Global Cancer Project Map.
 	</div>
 	<div class="c-staff -row">
-		required> <input type="checkbox" I accept these terms<span class="circle"></span>
+		<input type="checkbox" required> I accept these terms<span class="circle"></span>
 	</div>
 </div>
